--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 </head>
 <body>
 <h1>ⓗ</h1>
+<div class="mobile-wrapper">
 <div class="contentsblock"><a class="contents" href="#page1"><mark>❶ 도표 圖表</mark></a></div>
 <div class="contentsblock"><a class="contents" href="#page2"><mark>❷ 명함 名銜</mark></a></div>
 <div class="contentsblock"><a class="contents" href="https://www.instagram.com/aoystu/"><mark>➌ 작업 作業</mark></a></div>
+<div class="contentsblock"><a class="contents" href="https://hyuk.xyz/blur/"><mark>☁</mark></a></div>
+</div></div>
 
 <section id="page1" class="page">
 	<div class="container">
@@ -25,7 +28,7 @@
 					<td class="titlewhite"><a class="titletext">혁은 지금 爀は今</a></td>
 				</tr>
 				<tr>
-					<td class="textbox"><div class="verticalbox"><span class="verticaltext2"><ul><li><strong>혁</strong>은 2027년 2월까지 군 복무한다.</li><li><strong>혁</strong>은 <a href="https://birdcall.online/">Birdcall</a>에서 <a href="https://websitesite.xyz/">지수</a>에게 Html을 배웠다.</li><li><strong>혁</strong>은 20세기 일본 그래픽에 관심이 생겼다.</li><li><strong>혁</strong>은 윤상과 이소라, ABBA를 즐겨 듣는다.</li><li><strong>혁</strong>은 이름이 가지는 의미를 고민 중이다.</li><li><strong>혁</strong>은 홍익대학교에서 시각디자인을 공부한다.</li><li><strong>혁</strong>은 <a href="https://h2j603.github.io/theconespiracy/">트래픽콘</a> 사진을 수집 중이다.</li><li><strong>혁</strong>은 아름다운 노랫말을 수집 중이다.</li><li><strong>혁</strong>은 책을 만들고, 웹을 만들고, 글자를 그린다.</li><li><strong>혁</strong>은 아주 느슨하게 독일어를 공부 중이다.</li><li><strong>혁</strong>은 원동력을 찾고 있다.</li></ul>
+					<td class="textbox"><div class="verticalbox"><span class="verticaltext2"><ul><li><strong>혁</strong>은 2027년 2월까지 군 복무한다.</li><li><strong>혁</strong>은 <a href="https://birdcall.online/">Birdcall</a>에서 <a href="https://websitesite.xyz/">지수</a>에게 Html을 배웠다.</li><li class="mobile-hidden"><strong>혁</strong>은 20세기 일본 그래픽에 관심이 생겼다.</li><li class="mobile-hidden"><strong>혁</strong>은 윤상과 이소라, ABBA를 즐겨 듣는다.</li><li><strong>혁</strong>은 이름이 가지는 의미를 고민 중이다.</li><li><strong>혁</strong>은 홍익대학교에서 시각디자인을 공부한다.</li><li><strong>혁</strong>은 <a href="https://h2j603.github.io/theconespiracy/">트래픽콘</a> 사진을 수집 중이다.</li><li class="mobile-hidden"><strong>혁</strong>은 아름다운 노랫말을 수집 중이다.</li><li><strong>혁</strong>은 책을 만들고, 웹을 만들고, 글자를 그린다.</li><li class="mobile-hidden"><strong>혁</strong>은 아주 느슨하게 독일어를 공부 중이다.</li><li class="mobile-hidden"><strong>혁</strong>은 원동력을 찾고 있다.</li></ul>
 
 					 </span></div></td>
 				</tr>
@@ -37,25 +40,25 @@
 				<td colspan="8" class="titleblack"><a class="titletext">체크리스트 チェックリスト</a></td>
 			</tr>
 			<tr>
-				<td>◯</td><td>◯</td><td>◯</td><td></td><td></td><td></td><td></td><td class="blacktd "><a class="verticaltext" href="https://mblogthumb-phinf.pstatic.net/MjAyMzAzMTBfMTI3/MDAxNjc4NDUzNDI5OTg1.hqxa0J_hpkE0ENgNcXxg2uqOFgSSN0zwanI6zOJ0_MMg.QAvIZilSO69vGdPUnBPSWZqRgX3hHyGaRLyZhngo3RQg.JPEG.enoggi/SE-b9e39c3c-ba21-47c3-a43c-74e5c59e5dd6.jpg?type=w800">運</a></td>
+				<td>◯</td><td>◯</td><td>◯</td><td></td><td></td><td></td><td></td><td class="blacktd "><a class="verticaltext" href="https://mblogthumb-phinf.pstatic.net/MjAyMzAzMTBfMTI3/MDAxNjc4NDUzNDI5OTg1.hqxa0J_hpkE0ENgNcXxg2uqOFgSSN0zwanI6zOJ0_MMg.QAvIZilSO69vGdPUnBPSWZqRgX3hHyGaRLyZhngo3RQg.JPEG.enoggi/SE-b9e39c3c-ba21-47c3-a43c-74e5c59e5dd6.jpg?type=w800">幸</a></td>
 			</tr>
 			<tr>
 				<td></td><td></td><td></td><td></td><td></td><td></td><td class="blacktd"><a class="verticaltext" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2w7r9PtaSMRAaJ-76llRjr7Zb3oQvaRKNkw&s">運</a></td><td></td>
 			</tr>
 			<tr>
-				<td></td><td></td><td></td><td></td><td></td><td class="blacktd"><a class="verticaltext" href="https://img.danawa.com/images/descFiles/5/7/4006545_1567504509028.jpeg">運</a></td><td></td><td></td>
+				<td></td><td></td><td></td><td></td><td></td><td class="blacktd"><a class="verticaltext" href="https://img.danawa.com/images/descFiles/5/7/4006545_1567504509028.jpeg">幸</a></td><td></td><td></td>
 			</tr>
 			<tr>
 				<td></td><td></td><td></td><td></td><td class="blacktd"><a class="verticaltext" href="https://mblogthumb-phinf.pstatic.net/MjAyMTA2MjlfMjM5/MDAxNjI0OTI4NjI5NjY2.L-jmqS08-1faRPlmScYzJj99ejVVeK92EyF69NrN6uEg.kbZQxbTaXKexPa7tXaWtfs4A-1yWV18rKKKw5tueOHog.JPEG.hsb7827/%EC%96%B4%EB%A5%B4%EC%8B%A0%EC%A7%A4_%EC%9B%94%EC%9A%94%EC%9D%BC%EC%A7%A4_%EC%9B%94%EC%9A%94%EC%9D%BC%EC%9D%B8%EC%82%AC%EC%9D%B4%EB%AF%B8%EC%A7%80_%EC%9B%94%EC%9A%94%EC%9D%BC%EC%95%84%EC%B9%A8%EC%9D%B8%EC%82%AC%EC%9D%B4%EB%AF%B8%EC%A7%80_%EC%9B%94%EC%9A%94%EC%9D%BC%EC%B9%B4%ED%86%A1%EC%9D%B4%EB%AF%B8%EC%A7%80_%EC%A2%8B%EC%9D%80%EA%B8%80%EA%B7%80%EB%AA%A8%EC%9D%8C_%EC%A2%8B%EC%9D%80%EA%B8%80%EB%AA%A8%EC%9D%8C_%EC%9B%94%EC%9A%94%EC%9D%BC%EC%9D%B8%EC%82%AC%EC%9D%B4%EB%AF%B8%EC%A7%80%EB%AA%A8%EC%9D%8C_%EC%A7%A4%EB%AA%A8%EC%9D%8C_%EC%9C%BC%EB%A5%B4%EC%8B%A0%EC%A7%A4%EB%AA%A8%EC%9D%8C_%ED%95%9C%EC%A3%BC.jpg?type=w800">運</a></td><td></td><td></td><td></td>
 			</tr>
 			<tr>
-				<td></td><td></td><td></td><td class="blacktd"><a class="verticaltext" href="https://mblogthumb-phinf.pstatic.net/MjAyNDAyMjhfMjg1/MDAxNzA5MTIyOTMzODYz.K8pWhwFCujkECorcjWZVO2qNOkqg7fpKhPWW8gsC0dQg.fBO17BFu2YmFl7_R_0oPQvypNyEidFbtNBL4OsQcRvIg.JPEG/IMG_9710.jpg?type=w800">運</a></td><td></td><td></td><td></td><td></td>
+				<td></td><td></td><td></td><td class="blacktd"><a class="verticaltext" href="https://mblogthumb-phinf.pstatic.net/MjAyNDAyMjhfMjg1/MDAxNzA5MTIyOTMzODYz.K8pWhwFCujkECorcjWZVO2qNOkqg7fpKhPWW8gsC0dQg.fBO17BFu2YmFl7_R_0oPQvypNyEidFbtNBL4OsQcRvIg.JPEG/IMG_9710.jpg?type=w800">幸</a></td><td></td><td></td><td></td><td></td>
 			</tr>
 			<tr>
 				<td></td><td></td><td class="blacktd"><a class="verticaltext" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQjPkrN7pDtc-XFkoWfHM7Hkv-lU6IiiNo_g&s">運</a></td><td></td><td></td><td></td><td></td><td></td>
 			</tr>
 			<tr>
-				<td></td><td class="blacktd"><a class="verticaltext" href="https://i.pinimg.com/236x/4b/7e/b1/4b7eb116323811546ef591350ffce25d.jpg">運</a></td><td></td><td></td><td></td><td></td><td></td><td></td>
+				<td></td><td class="blacktd"><a class="verticaltext" href="https://i.pinimg.com/236x/4b/7e/b1/4b7eb116323811546ef591350ffce25d.jpg">幸</a></td><td></td><td></td><td></td><td></td><td></td><td></td>
 			</tr>
 			<tr>
 				<td class="blacktd"><a class="verticaltext" href=https://i.pinimg.com/736x/a3/64/df/a364df0b9318f663dcb6aafb00cb22a5.jpg>運</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
