--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-<h1><a href="https://hyuk.xyz/">Ⓗ</a></h1>
+<h1><a href="https://hyuk.xyz/"><img src="/h2j603.github.io/img/logo.svg" alt="logo" class="logo-img"></a></h1>
 <div class="mobile-wrapper">
 <div class="contentsblock"><a class="contents" href="#page1"><mark>㈠ 도표 圖表</mark></a></div>
 <div class="contentsblock"><a class="contents" href="#page2"><mark>㈡ 명함 名銜</mark></a></div>
