--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="contentsblock"><a class="contents" href="#page2"><mark>㈡ 명함 名銜</mark></a></div>
 <div class="contentsblock"><a class="contents" href="https://www.instagram.com/aoystu/"><mark>㈡ 작업 作業</mark></a></div>
 <div class="contentsblock"><a class="contents" href="https://hyuk.xyz/"><mark>㈣ 섞기 混合</mark></a></div>
-</div></div>
+</div>
 
 <section id="page1" class="page">
 	<div class="container">
