--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 <h1><a href="https://hyuk.xyz/"><img src="/h2j603.github.io/img/logo.svg" alt="logo" class="logo-img"></a></h1>
 <div class="mobile-wrapper">
-<div class="contentsblock"><a class="contents" href="#page1"><mark>㊀ 『도표 圖表』</mark></a></div>
-<div class="contentsblock"><a class="contents" href="#page2"><mark>㊁ 『명함 名銜』</mark></a></div>
-<div class="contentsblock"><a class="contents" href="https://www.instagram.com/aoystu/"><mark>㊂ 『작업 作業』</mark></a></div>
-<div class="contentsblock"><a class="contents" href="https://hyuk.xyz/"><mark>㊃ 『혼합 混合』</mark></a></div>
+<div class="contentsblock"><a class="contents" href="#page1"><mark>㊀ 【도표 圖表】</mark></a></div>
+<div class="contentsblock"><a class="contents" href="#page2"><mark>㊁ 【명함 名銜】</mark></a></div>
+<div class="contentsblock"><a class="contents" href="https://www.instagram.com/aoystu/"><mark>㊂ 【작업 作業】</mark></a></div>
+<div class="contentsblock"><a class="contents" href="https://hyuk.xyz/"><mark>㊃ 【혼합 混合】</mark></a></div>
 </div></div>
 
 <section id="page1" class="page">
