--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<td class="titlewhite"><a class="titletext">혁은 지금 爀は今</a></td>
 				</tr>
 				<tr>
-					<td class="textbox"><div class="verticalbox"><span class="verticaltext2"><ul><li><strong>爀</strong>은 2027년 2월까지 군 복무한다.</li><li><strong>爀</strong>은 <a href="https://birdcall.online/">Birdcall</a>에서 <a href="https://websitesite.xyz/">지수</a>에게 Html을 배웠다.</li><li class="mobile-hidden"><strong>爀</strong>은 20세기 일본 그래픽에 관심이 생겼다.</li><li><strong>爀</strong>은 윤상과 이소라, ABBA를 즐겨 듣는다.</li><li><strong>爀</strong>은 이름이 가지는 의미를 고민 중이다.</li><li><strong>爀</strong>은 홍익대학교에서 시각디자인을 공부한다.</li><li><strong>爀</strong>은 <a href="https://h2j603.github.io/theconespiracy/">트래픽콘</a> 사진을 수집 중이다.</li><li class="mobile-hidden"><strong>爀</strong>은 아름다운 노랫말을 수집 중이다.</li><li><strong>爀</strong>은 책과 웹을 만들고, 글자를 그린다.</li><li class="mobile-hidden"><strong>爀</strong>은 아주 느슨하게 독일어를 공부 중이다.</li><li><strong>爀</strong>은 원동력을 찾고 있다.</li></ul>
+					<td class="textbox"><div class="verticalbox"><span class="verticaltext2"><ul><li><strong>爀</strong>은 2027년 2월까지 군 복무한다.</li><li><strong>爀</strong>은 <a href="https://birdcall.online/">Birdcall</a>에서 <a href="https://websitesite.xyz/">지수</a>에게 Html을 배웠다.</li><li class="mobile-hidden"><strong>爀</strong>은 20세기 일본 그래픽에 관심이 생겼다.</li><li><strong>爀</strong>은 윤상과 이소라, ABBA를 즐겨 듣는다.</li><li><strong>爀</strong>은 이름이 가지는 의미를 고민 중이다.</li><li><strong>爀</strong>은 홍익대학교에서 시각디자인을 공부한다.</li><li><strong>爀</strong>은 <a href="https://h2j603.github.io/theconespiracy/">트래픽콘</a> 사진을 수집 중이다.</li><li class="mobile-hidden"><strong>爀</strong>은 아름다운 노랫말을 수집 중이다.</li><li><strong>爀</strong>은 책과 웹을 만들고, 글자를 그린다.</li><li class="mobile-hidden"><strong>爀</strong>은 아주 느슨하게 독일어를 공부 중이다.</li><li><strong>爀</strong>은 지속가능한 작업을 위한 원동력을 찾고 있다.</li></ul>
 
 					 </span></div></td>
 				</tr>
