--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>🏠hyuk🏠</title>
+	<title>🏠hyuk爀🏠</title>
 	<meta name="description" content="hyuk's homesweethome">
 	<meta name="keywords" content="키워드1, 키워드2">
 	<meta property="og:image" content="">
