--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
 
 </section>
 
+	<footer>by <a href="https://www.instagram.com/aoystu/" class="footertext">Hyuk Jang</a> from Seoul, Korea.<br>Last updated 2025-07-08</footer>
+
 
 
 
