--- a/index.html
+++ b/index.html
@@ -74,13 +74,19 @@
 						<div class="leftbottom2">
 			<table class="table-c">
 				<tr>
-					<td class="web">이 표의 그래픽은 Kohei Sugiura의 <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBIpXt1j2exVUbKDPFzZOoDkSpeSSNIPBWLA&s">『印刷ユーザーガイド』</a>에서 많은 영향을 받았다.</td>
+					<td class="web">✽<br>이 웹은 Kohei Sugiura의 <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBIpXt1j2exVUbKDPFzZOoDkSpeSSNIPBWLA&s">『印刷ユーザーガイド』</a>에서 많은 영향을 받았다.</td>
 				</tr>
 				<tr>
-					<td class="web">연락은 <a href="#page2">명함</a>의 정보를 참고해주기를 바란다.</td>
+					<td class="web">✽<br>연락은 <a href="#page2">명함</a>의 정보를 참고해주기를 바란다.</td>
 				</tr>
 				<tr>
-					<td class="titleblack">Last Update: 2025.08.21</td>
+					<td class="web">✽<br>이외 그래픽 작업에 대한 정보는 <a href="https://www.instagram.com/aoystu/">인스타그램</a>을 찾아와주길 바란다.</td>
+				</tr>
+				<tr>
+					<td class="web">✽<br>이외 그래픽 작업에 대한 정보는 <a href="https://www.instagram.com/aoystu/">인스타그램</a>을 찾아와주길 바란다.</td>
+				</tr>
+				<tr>
+					<td class="web">✽<br>거리에서 트래픽콘을 발견한다면 <a href="mailto:aoystu@gmail.com">이메일</a>로 제보해주길 바란다.</td>
 				</tr>
 			</table>
 		</div>
@@ -108,7 +114,7 @@
 	<div class="container-card">
 		<div class="border">
 		<div class="card-left">
-		<p class="cardlogo">ⓗ</p>
+		<p class="cardlogo"><img src="/h2j603.github.io/img/logo.svg" alt="logo" class="logo-img"></p>
 		<p class="name-1">張爀</p> </div>
 	<div class="card-right">
 		<p class="card-content"><b><a href="mailto:aoystu@gmail.com">장혁 · Hyuk Jang</a></b><br><br><strong>Graphic Designer</strong> based in Seoul, KR.<br><br><a href="http://hyuk.xyz/">hyuk.xyz</a><br><a href="https://www.instagram.com/hyuaoy/">@hyuaoy</a></p></div>
