--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 					<td class="web">✽<br>이외 그래픽 작업에 대한 정보는 <a href="https://www.instagram.com/aoystu/">인스타그램</a>을 찾아와주길 바란다.</td>
 				</tr>
 				<tr>
-					<td class="web">✽<br>이외 그래픽 작업에 대한 정보는 <a href="https://www.instagram.com/aoystu/">인스타그램</a>을 찾아와주길 바란다.</td>
-				</tr>
-				<tr>
 					<td class="web">✽<br>거리에서 트래픽콘을 발견한다면 <a href="mailto:aoystu@gmail.com">이메일</a>로 제보해주길 바란다.</td>
+				</tr>				
+				<tr>
+					<td class="web">✽<br>오늘의 추천곡은 <a href="https://youtu.be/5CHEqJgf7dw?si=zO_3y8r7oix4q-Ke">Janet Jackson 『Together Again』</td>
 				</tr>
 			</table>
 		</div>
