--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 		<div class="border">
 		<div class="card-left">
 		<p class="cardlogo"><img src="/h2j603.github.io/img/logo.svg" alt="logo" class="logo-img"></p>
+			<p class="name-1">張爀</p> </div>
 		
 	<div class="card-right">
 		<p class="card-content"><b><a href="mailto:aoystu@gmail.com">장혁 · Hyuk Jang</a></b><br><br><strong>Graphic Designer</strong> based in Seoul, KR.<br><br><a href="http://hyuk.xyz/">hyuk.xyz</a><br><a href="https://www.instagram.com/hyuaoy/">@hyuaoy</a></p></div>
